kubernetes-patterns/behavioral/service-discovery/ingress-with-fan-out.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-generator
  labels:
    name: random-generator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: "/"
          pathType: "Prefix"
          backend:
            serviceName: random-generator
            servicePort: 8080
        - path: "/cluster-status"
          pathType: "Exact"
          backend:
            serviceName: cluster-status
            servicePort: 80
