kubernetes-patterns/behavioral/service-discovery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-generator
  labels:
    name: random-generator
spec:
  backend:
    serviceName: random-generator
    servicePort: 8080
